# py-pkg-template

./: .gitignore  pyproject.toml
tests/: test_package_name.py
